Fix menu on mobile

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -90,6 +90,7 @@ aside {
         position: relative;
         width: 100%;
         margin-bottom: 50px;
+        z-index: 1;
 
         .logo {
             max-width: 200px;
